**  denotes quite substantial/important changes
*** denotes really big changes 

Currently deprecated and liable to be removed: 
- single penalty tensor product smooths.
- p.type!=0 in summary.gam.

1.8-16

* Option 'edge.correct' added to 'gam.control' to allow better correction
  of edge of smoothing parameter space effects with 'gam' when RE/ML used. 	
	
* Fix to setting of penalty rank in smooth.construct.mrf.smooth.spec. 
  Previously this was wrong, which could cause failure with gamm if the 
  penalty was rank deficient. Thanks Paul Buerkner.

* Fix to Vb.corr call from gam.fit3.post.proc to ensure that sp not 
  dropped (wrongly treated as scale estimate) when P-REML or P-ML used. 
  Could cause failure depending on BLAS. Thanks Matteo Fasiolo.

* Fix in gam.outer that cuased failure with "efs" optimizer and fixed sps.

* Fix to `get.var' to drop matrix attributes of 1 column matrix variables.

* Extra argument added to `uniquecombs' to allow result to have same row
  ordering regardless of input data ordering. Now used by smooth constructors 
  that subsample unique covariate values during basis setup to ensure 
  invariance to data re-ordering. 

* Correction of scaling error in sherical correlation structure GP smooth.

* qf and rd functions for binomial family fixed for zero n case. 

1.8-15

* Fix of survival function prediction in cox.ph family. Code used expression 
  (8.8.5) in Klein and Moeschberger (2003), which is missing a term. Correct
  expression is, e.g., (10) from Andersen, Weis Bentzon and Klein (1996)
  Scandinavian Journal of Statistics.  

* Added help file 'cox.pht' for Cox PH regression with time dependent 
  covariates. 

* fix of potential seg fault in gdi.c:get_bSb if single smooth model 
  rank deficient (insufficient workspace allocated).

* gam.fit5 modified to step half if trial penalized likelihood is infinite.

* Fix so that bam works properly with drop.intercept=TRUE.

1.8-14
